--- a/inbox.org
+++ b/inbox.org
@@ -13,6 +13,14 @@ https://stackoverflow.com/questions/39088240/stuck-in-overwrite-mode-in-tmux
 https://unix.stackexchange.com/questions/24274/attach-to-different-windows-in-session
 tmux new-session -t "session name of other session"
 
+* Tmux display all options
+
+There are global options and session options and server options.  Typically server
+options are not what you're looking for
+
+tmux show-options -g
+tmux show-options  # This only shows options different than global
+
 * todo This should go into notesmine
 :LOGBOOK:
 - State "todo"       from              [2019-11-13 Wed 17:14]
