--- a/inbox.org
+++ b/inbox.org
@@ -219,3 +219,12 @@ git config --global core.excludesfile ~/.gitignore
 https://stackoverflow.com/questions/4824188/git-ignore-vim-temporary-files
 
 * Misc.
+
+ntpstat
+
+cat /proc/sys/vm/swappiness
+cat /proc/meminfo | grep -i hugepages_total
+
+# disable 
+echo never > /sys/kernel/mm/transparent_hugepage/defrag 
+echo never > /sys/kernel/mm/transparent_hugepage/enabled 
